--- a/i3/config
+++ b/i3/config
@@ -135,7 +135,7 @@ bindsym $mod+Shift+r restart
 #############################################
 # Modes
 #############################################
-set $sysmenu "system:   [p]oweroff    [r]eboot    [l]ogout    [s]uspend    [h]ibernate"
+set $sysmenu "  [p]oweroff    [r]eboot    [l]ogout    [s]uspend    [h]ibernate"
 bindsym $mod+Delete mode $sysmenu
 
 mode $sysmenu
@@ -185,9 +185,9 @@ exec --no-startup-id feh --bg-scale ~/.dotfiles/wallpapers/archlinux-wallpaper.p
 exec --no-startup-id paswitch alsa_output.pci-0000_00_1f.3.analog-stereo
 
 # increase sound volume
-bindsym XF86AudioRaiseVolume exec --no-startup-id "pactl set-sink-volume @DEFAULT_SINK@ +5%;echo $(pactl list sinks | grep -A7 \\"Name:$(pactl info | grep -i \\"Default Sink\\" | cut -d':' -f2)\\" | tail -1 | cut -d'/' -f2) > $HOME/.config/conky/outfiles/sounddevice-volume.out"
+bindsym XF86AudioRaiseVolume exec --no-startup-id "pactl set-sink-volume @DEFAULT_SINK@ +5%;echo $(pactl list sinks | grep -A7 \\"Name:$(pactl info | grep -i \\"Default Sink\\" | cut -d':' -f2)\\" | tail -1 | cut -d'/' -f2 | sed -e 's/^[[:space:]]*//' | cut -d'%' -f1) > $HOME/.config/conky/outfiles/sounddevice-volume.out"
 # decrease sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id "pactl set-sink-volume @DEFAULT_SINK@ -5%;echo $(pactl list sinks | grep -A7 \\"Name:$(pactl info | grep -i \\"Default Sink\\" | cut -d':' -f2)\\" | tail -1 | cut -d'/' -f2) > $HOME/.config/conky/outfiles/sounddevice-volume.out"
+bindsym XF86AudioLowerVolume exec --no-startup-id "pactl set-sink-volume @DEFAULT_SINK@ -5%;echo $(pactl list sinks | grep -A7 \\"Name:$(pactl info | grep -i \\"Default Sink\\" | cut -d':' -f2)\\" | tail -1 | cut -d'/' -f2 | sed -e 's/^[[:space:]]*//' | cut -d'%' -f1) > $HOME/.config/conky/outfiles/sounddevice-volume.out"
 # mute sound
 bindsym XF86AudioMute exec --no-startup-id "pactl set-sink-mute @DEFAULT_SINK@ toggle;if [ $(pactl list sinks | grep -A6 \\"Name:$(pactl info | grep -i \\"Default Sink\\" | cut -d':' -f2)\\" | tail -1 | cut -d':' -f2 | sed -e 's/^[ \t]*//' | grep -i yes | wc -l) -eq 0 ]; then echo 87c7bf > $HOME/.config/conky/outfiles/sounddevice-mute.out; else echo f57900 > $HOME/.config/conky/outfiles/sounddevice-mute.out; fi"
 # mute microphone
